# RPG_character_sheet

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml  reset_db.py
alembic/versions/: 23206f705a61_automatic_table_generation.py  375c38ce0d9d_add_corruption_col_to_base_mechanics.py  6c7cd4f9591c_add_cv_support.py  a9937d4c5443_v0_1_0_autogeneration.py  d834ca5f3c12_add_mutations_to_base_mechanics.py
app/: main.py  models.py  utils.py
app/static/: style.css  styles.css
app/templates/: base.html  character_battle_page.html  character_fluff_page.html  character_skills_talents_page.html  index.html  page_base.html
app/templates/battle_page/: ammunition.html  enc_wounds.html
app/templates/fluff_page/: description_table.html  doom.html  fluff.html  trappings_and_notes.html
app/templates/skills_and_talents/: basic_skills.html  characteristics.html  special_skills.html  talents.html
src/: __init__.py  main.py  models.py  utils.py
src/static/: scripts.js  style.css
src/templates/: base.html  character_battle_page.html  character_fluff_page.html  character_skills_talents_page.html  index.html  page_base.html  party_ledger_page.html
src/templates/battle_page/: ammunition.html  armor.html  enc_wounds.html  spells_and_prayers.html  weapons.html
src/templates/fluff_page/: description_table.html  doom.html  fluff.html  trappings_and_notes.html  xp_move_resilience.html
src/templates/skills_and_talents/: basic_skills.html  characteristics.html  special_skills.html  talents.html
