[project]
name = "character-creator"
version = "0.2.1"
description = "simple character creator for pen and paper role playing games"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.14.0",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.0.3",
    "sqlalchemy>=2.0.36",
    "waitress>=3.0.2",
]

[tool.uv]
dev-dependencies = [
    "character-creator",
    "ruff>=0.8.2",
]

[tool.uv.sources]
character-creator = { workspace = true }

